# json-rpc-server

./: .flake8  .gitignore  .pylintrc  Makefile  README.md  jsonrpcserver.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
jsonrpcserver/: __init__.py  introspection.py
tests/: test_server.py
