[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "damn-simple-jsonrpc-server"
version = "0.5.0"
description = "Damn simple, framework-agnostic JSON-RPC server"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "BSD License" }
authors = [
  { name = "Marcin Nowak", email = "marcin.j.nowak@gmail.com" }
]
keywords = ["web", "json", "rpc", "python", "server"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/marcinn/json-rpc-server"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.ruff]
line-length = 88
